--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1102,6 +1102,12 @@ select {
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
+.col-span-5 {
+	grid-column: span 5 / span 5;
+}
+.col-span-4 {
+	grid-column: span 4 / span 4;
+}
 .m-1 {
 	margin: 0.25rem;
 }
@@ -1138,6 +1144,14 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1226,6 +1240,12 @@ select {
 .mb-5 {
 	margin-bottom: 1.25rem;
 }
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .block {
 	display: block;
 }
@@ -1279,6 +1299,18 @@ select {
 }
 .h-full {
 	height: 100%;
+}
+.h-auto {
+	height: auto;
+}
+.h-2\/4 {
+	height: 50%;
+}
+.h-1\/5 {
+	height: 20%;
+}
+.h-64 {
+	height: 16rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1339,6 +1371,18 @@ select {
 }
 .w-1\/2 {
 	width: 50%;
+}
+.w-2\/5 {
+	width: 40%;
+}
+.w-3\/5 {
+	width: 60%;
+}
+.w-64 {
+	width: 16rem;
+}
+.w-96 {
+	width: 24rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1418,6 +1462,9 @@ select {
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
+.grid-cols-12 {
+	grid-template-columns: repeat(12, minmax(0, 1fr));
+}
 .flex-row-reverse {
 	flex-direction: row-reverse;
 }
@@ -1435,6 +1482,9 @@ select {
 }
 .items-center {
 	align-items: center;
+}
+.items-stretch {
+	align-items: stretch;
 }
 .justify-start {
 	justify-content: flex-start;
@@ -1582,6 +1632,14 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
+.border-gray-700 {
+	--tw-border-opacity: 1;
+	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1669,6 +1727,22 @@ select {
 .bg-pink-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
+}
+.bg-green-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+}
+.bg-red-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
+}
+.bg-indigo-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1789,6 +1863,12 @@ select {
 }
 .pb-2 {
 	padding-bottom: 0.5rem;
+}
+.pl-2 {
+	padding-left: 0.5rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
@@ -1951,6 +2031,21 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
+.text-transparent {
+	color: transparent;
+}
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.text-yellow-300 {
+	--tw-text-opacity: 1;
+	color: rgba(252, 211, 77, var(--tw-text-opacity));
+}
+.text-yellow-200 {
+	--tw-text-opacity: 1;
+	color: rgba(253, 230, 138, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2086,6 +2181,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
 }
+.hover\:bg-green-600:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2105,6 +2204,26 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-green-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(6, 95, 70, var(--tw-text-opacity));
+}
+.hover\:text-red-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(153, 27, 27, var(--tw-text-opacity));
+}
+.hover\:text-indigo-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(55, 48, 163, var(--tw-text-opacity));
+}
+.hover\:text-yellow-400:hover {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.hover\:text-yellow-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(146, 64, 14, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2431,8 +2550,24 @@ select {
 		margin-top: 0px;
 	}
 
+	.md\:block {
+		display: block;
+	}
+
 	.md\:grid {
 		display: grid;
+	}
+
+	.md\:hidden {
+		display: none;
+	}
+
+	.md\:w-2\/5 {
+		width: 40%;
+	}
+
+	.md\:w-3\/5 {
+		width: 60%;
 	}
 
 	.md\:grid-cols-3 {
@@ -2476,6 +2611,14 @@ select {
 	.lg\:mx-10 {
 		margin-left: 2.5rem;
 		margin-right: 2.5rem;
+	}
+
+	.lg\:block {
+		display: block;
+	}
+
+	.lg\:hidden {
+		display: none;
 	}
 
 	.lg\:px-8 {
