--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1078,9 +1078,6 @@ select {
 .top-0 {
 	top: 0px;
 }
-.right-10 {
-	right: 2.5rem;
-}
 .right-1 {
 	right: 0.25rem;
 }
@@ -1093,29 +1090,26 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-.col-span-3 {
-	grid-column: span 3 / span 3;
-}
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
-.col-span-5 {
-	grid-column: span 5 / span 5;
-}
 .col-span-4 {
 	grid-column: span 4 / span 4;
+}
+.col-span-3 {
+	grid-column: span 3 / span 3;
+}
+.col-span-5 {
+	grid-column: span 5 / span 5;
 }
 .m-1 {
 	margin: 0.25rem;
 }
 .m-10 {
 	margin: 2.5rem;
-}
-.m-2 {
-	margin: 0.5rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1125,9 +1119,17 @@ select {
 	margin-left: 1.25rem;
 	margin-right: 1.25rem;
 }
+.mx-1 {
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+}
 .my-5 {
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
+}
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .my-20 {
 	margin-top: 5rem;
@@ -1137,14 +1139,6 @@ select {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
-.my-3 {
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
-}
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
 .mx-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
@@ -1152,6 +1146,10 @@ select {
 .my-1 {
 	margin-top: 0.25rem;
 	margin-bottom: 0.25rem;
+}
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1222,29 +1220,26 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.mb-1 {
-	margin-bottom: 0.25rem;
-}
-.mt-20 {
-	margin-top: 5rem;
-}
-.mr-1 {
-	margin-right: 0.25rem;
-}
-.-mt-px {
-	margin-top: -1px;
-}
 .mb-10 {
 	margin-bottom: 2.5rem;
 }
-.mb-5 {
-	margin-bottom: 1.25rem;
+.mb-1 {
+	margin-bottom: 0.25rem;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
+.mr-1 {
+	margin-right: 0.25rem;
+}
+.mt-20 {
+	margin-top: 5rem;
+}
 .mb-2 {
 	margin-bottom: 0.5rem;
+}
+.-mt-px {
+	margin-top: -1px;
 }
 .block {
 	display: block;
@@ -1294,23 +1289,20 @@ select {
 .h-3 {
 	height: 0.75rem;
 }
-.h-24 {
-	height: 6rem;
-}
 .h-full {
 	height: 100%;
 }
-.h-auto {
-	height: auto;
-}
-.h-2\/4 {
-	height: 50%;
-}
-.h-1\/5 {
-	height: 20%;
-}
 .h-64 {
 	height: 16rem;
+}
+.h-24 {
+	height: 6rem;
+}
+.h-72 {
+	height: 18rem;
+}
+.h-auto {
+	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1360,29 +1352,17 @@ select {
 .w-3 {
 	width: 0.75rem;
 }
-.w-1\/4 {
-	width: 25%;
-}
-.w-2\/4 {
+.w-1\/2 {
 	width: 50%;
+}
+.w-96 {
+	width: 24rem;
 }
 .w-36 {
 	width: 9rem;
 }
-.w-1\/2 {
-	width: 50%;
-}
-.w-2\/5 {
-	width: 40%;
-}
-.w-3\/5 {
-	width: 60%;
-}
-.w-64 {
-	width: 16rem;
-}
-.w-96 {
-	width: 24rem;
+.w-1\/4 {
+	width: 25%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1456,17 +1436,11 @@ select {
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-5 {
-	grid-template-columns: repeat(5, minmax(0, 1fr));
-}
 .grid-cols-12 {
 	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.flex-row-reverse {
-	flex-direction: row-reverse;
+.grid-cols-5 {
+	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1483,9 +1457,6 @@ select {
 .items-center {
 	align-items: center;
 }
-.items-stretch {
-	align-items: stretch;
-}
 .justify-start {
 	justify-content: flex-start;
 }
@@ -1497,6 +1468,9 @@ select {
 }
 .justify-between {
 	justify-content: space-between;
+}
+.justify-evenly {
+	justify-content: space-evenly;
 }
 .gap-6 {
 	gap: 1.5rem;
@@ -1515,6 +1489,21 @@ select {
 }
 .gap-8 {
 	gap: 2rem;
+}
+.gap-10 {
+	gap: 2.5rem;
+}
+.gap-11 {
+	gap: 2.75rem;
+}
+.gap-12 {
+	gap: 3rem;
+}
+.gap-16 {
+	gap: 4rem;
+}
+.gap-24 {
+	gap: 6rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1568,9 +1557,6 @@ select {
 }
 .rounded-full {
 	border-radius: 9999px;
-}
-.rounded-2xl {
-	border-radius: 1rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1628,17 +1614,13 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
-.border-gray-700 {
-	--tw-border-opacity: 1;
-	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
-}
 .border-gray-500 {
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1704,9 +1686,9 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
-.bg-indigo-400 {
+.bg-pink-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
+	background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
 }
 .bg-red-400 {
 	--tw-bg-opacity: 1;
@@ -1724,25 +1706,9 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
-.bg-pink-300 {
+.bg-indigo-400 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
-}
-.bg-green-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
-}
-.bg-red-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
-}
-.bg-indigo-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
-}
-.bg-blue-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1760,17 +1726,14 @@ select {
 .p-3 {
 	padding: 0.75rem;
 }
-.p-4 {
-	padding: 1rem;
+.p-5 {
+	padding: 1.25rem;
 }
 .p-10 {
 	padding: 2.5rem;
 }
 .p-1 {
 	padding: 0.25rem;
-}
-.p-5 {
-	padding: 1.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1858,14 +1821,14 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pt-8 {
-	padding-top: 2rem;
-}
 .pb-2 {
 	padding-bottom: 0.5rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
+}
+.pt-8 {
+	padding-top: 2rem;
 }
 .text-left {
 	text-align: left;
@@ -1926,9 +1889,6 @@ select {
 }
 .font-bold {
 	font-weight: 700;
-}
-.font-thin {
-	font-weight: 100;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -2011,9 +1971,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
-.text-blue-300 {
+.text-yellow-400 {
 	--tw-text-opacity: 1;
-	color: rgba(147, 197, 253, var(--tw-text-opacity));
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
 .text-gray-100 {
 	--tw-text-opacity: 1;
@@ -2030,21 +1994,6 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-transparent {
-	color: transparent;
-}
-.text-yellow-400 {
-	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-.text-yellow-300 {
-	--tw-text-opacity: 1;
-	color: rgba(252, 211, 77, var(--tw-text-opacity));
-}
-.text-yellow-200 {
-	--tw-text-opacity: 1;
-	color: rgba(253, 230, 138, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2085,6 +2034,10 @@ select {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.outline-none {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
 .ring-1 {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2097,6 +2050,9 @@ select {
 .ring-black {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(0, 0, 0, var(--tw-ring-opacity));
+}
+.ring-transparent {
+	--tw-ring-color: transparent;
 }
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
@@ -2165,14 +2121,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-600:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}
-.hover\:bg-yellow-400:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
 .hover\:bg-blue-500:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
@@ -2181,9 +2129,33 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
 }
+.hover\:bg-gray-600:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.hover\:bg-yellow-400:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+}
 .hover\:bg-green-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
+}
+.hover\:bg-green-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.hover\:bg-red-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2205,6 +2177,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.hover\:text-yellow-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(146, 64, 14, var(--tw-text-opacity));
+}
 .hover\:text-green-800:hover {
 	--tw-text-opacity: 1;
 	color: rgba(6, 95, 70, var(--tw-text-opacity));
@@ -2217,13 +2193,16 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
-.hover\:text-yellow-400:hover {
+.hover\:text-red-300:hover {
 	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
+	color: rgba(252, 165, 165, var(--tw-text-opacity));
 }
-.hover\:text-yellow-800:hover {
+.hover\:text-red-700:hover {
 	--tw-text-opacity: 1;
-	color: rgba(146, 64, 14, var(--tw-text-opacity));
+	color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+	text-decoration: underline;
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2251,6 +2230,10 @@ select {
 .focus\:border-gray-300:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+.focus\:border-blue-100:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(219, 234, 254, var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus {
 	--tw-bg-opacity: 1;
@@ -2550,16 +2533,8 @@ select {
 		margin-top: 0px;
 	}
 
-	.md\:block {
-		display: block;
-	}
-
 	.md\:grid {
 		display: grid;
-	}
-
-	.md\:hidden {
-		display: none;
 	}
 
 	.md\:w-2\/5 {
@@ -2568,6 +2543,10 @@ select {
 
 	.md\:w-3\/5 {
 		width: 60%;
+	}
+
+	.md\:w-1\/2 {
+		width: 50%;
 	}
 
 	.md\:grid-cols-3 {
@@ -2619,6 +2598,10 @@ select {
 
 	.lg\:hidden {
 		display: none;
+	}
+
+	.lg\:justify-between {
+		justify-content: space-between;
 	}
 
 	.lg\:px-8 {
