--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1081,6 +1081,15 @@ select {
 .right-1 {
 	right: 0.25rem;
 }
+.bottom-4 {
+	bottom: 1rem;
+}
+.bottom-10 {
+	bottom: 2.5rem;
+}
+.right-5 {
+	right: 1.25rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1102,8 +1111,8 @@ select {
 .col-span-3 {
 	grid-column: span 3 / span 3;
 }
-.col-span-5 {
-	grid-column: span 5 / span 5;
+.float-right {
+	float: right;
 }
 .m-1 {
 	margin: 0.25rem;
@@ -1241,6 +1250,21 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.ml-20 {
+	margin-left: 5rem;
+}
+.mr-20 {
+	margin-right: 5rem;
+}
+.ml-10 {
+	margin-left: 2.5rem;
+}
+.mr-4 {
+	margin-right: 1rem;
+}
 .block {
 	display: block;
 }
@@ -1295,14 +1319,14 @@ select {
 .h-64 {
 	height: 16rem;
 }
+.h-auto {
+	height: auto;
+}
 .h-24 {
 	height: 6rem;
 }
 .h-72 {
 	height: 18rem;
-}
-.h-auto {
-	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1442,6 +1466,12 @@ select {
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
+.grid-cols-4 {
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-9 {
+	grid-template-columns: repeat(9, minmax(0, 1fr));
+}
 .flex-col {
 	flex-direction: column;
 }
@@ -1469,9 +1499,6 @@ select {
 .justify-between {
 	justify-content: space-between;
 }
-.justify-evenly {
-	justify-content: space-evenly;
-}
 .gap-6 {
 	gap: 1.5rem;
 }
@@ -1490,20 +1517,14 @@ select {
 .gap-8 {
 	gap: 2rem;
 }
+.gap-3 {
+	gap: 0.75rem;
+}
 .gap-10 {
 	gap: 2.5rem;
 }
-.gap-11 {
-	gap: 2.75rem;
-}
-.gap-12 {
-	gap: 3rem;
-}
-.gap-16 {
-	gap: 4rem;
-}
-.gap-24 {
-	gap: 6rem;
+.gap-20 {
+	gap: 5rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1573,6 +1594,10 @@ select {
 .rounded-b-none {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
+}
+.rounded-t {
+	border-top-left-radius: 0.25rem;
+	border-top-right-radius: 0.25rem;
 }
 .border {
 	border-width: 1px;
@@ -1709,6 +1734,14 @@ select {
 .bg-indigo-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
+}
+.bg-blue-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1995,6 +2028,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
+.text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2034,10 +2071,6 @@ select {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.outline-none {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
 .ring-1 {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2050,9 +2083,6 @@ select {
 .ring-black {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(0, 0, 0, var(--tw-ring-opacity));
-}
-.ring-transparent {
-	--tw-ring-color: transparent;
 }
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
@@ -2121,6 +2151,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.hover\:bg-blue-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
 .hover\:bg-blue-500:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
@@ -2141,21 +2175,17 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
-.hover\:bg-blue-300:hover {
+.hover\:bg-green-500:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 .hover\:bg-indigo-500:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
-.hover\:bg-green-500:hover {
+.hover\:bg-gray-300:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-.hover\:bg-red-300:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 165, 165, var(--tw-bg-opacity));
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2193,13 +2223,17 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
-.hover\:text-red-300:hover {
-	--tw-text-opacity: 1;
-	color: rgba(252, 165, 165, var(--tw-text-opacity));
-}
 .hover\:text-red-700:hover {
 	--tw-text-opacity: 1;
 	color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
+.hover\:text-blue-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(29, 78, 216, var(--tw-text-opacity));
+}
+.hover\:text-gray-300:hover {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
@@ -2230,10 +2264,6 @@ select {
 .focus\:border-gray-300:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.focus\:border-blue-100:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(219, 234, 254, var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus {
 	--tw-bg-opacity: 1;
@@ -2444,6 +2474,10 @@ select {
 		transform: var(--tw-transform);
 	}
 
+	.sm\:flex-row {
+		flex-direction: row;
+	}
+
 	.sm\:items-start {
 		align-items: flex-start;
 	}
@@ -2533,6 +2567,10 @@ select {
 		margin-top: 0px;
 	}
 
+	.md\:mt-10 {
+		margin-top: 2.5rem;
+	}
+
 	.md\:grid {
 		display: grid;
 	}
@@ -2559,6 +2597,10 @@ select {
 
 	.md\:flex-row {
 		flex-direction: row;
+	}
+
+	.md\:justify-center {
+		justify-content: center;
 	}
 
 	.md\:gap-6 {
