--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1075,20 +1075,17 @@ select {
 .right-0 {
 	right: 0px;
 }
-.top-0 {
-	top: 0px;
-}
-.right-1 {
-	right: 0.25rem;
-}
-.bottom-4 {
-	bottom: 1rem;
-}
 .bottom-10 {
 	bottom: 2.5rem;
 }
 .right-5 {
 	right: 1.25rem;
+}
+.top-0 {
+	top: 0px;
+}
+.right-1 {
+	right: 0.25rem;
 }
 .z-0 {
 	z-index: 0;
@@ -1099,6 +1096,9 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.col-span-3 {
+	grid-column: span 3 / span 3;
+}
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
@@ -1108,17 +1108,14 @@ select {
 .col-span-4 {
 	grid-column: span 4 / span 4;
 }
-.col-span-3 {
-	grid-column: span 3 / span 3;
-}
 .float-right {
 	float: right;
 }
-.m-1 {
-	margin: 0.25rem;
-}
 .m-10 {
 	margin: 2.5rem;
+}
+.m-1 {
+	margin: 0.25rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1229,6 +1226,12 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mr-4 {
+	margin-right: 1rem;
+}
 .mb-10 {
 	margin-bottom: 2.5rem;
 }
@@ -1249,21 +1252,6 @@ select {
 }
 .-mt-px {
 	margin-top: -1px;
-}
-.mb-5 {
-	margin-bottom: 1.25rem;
-}
-.ml-20 {
-	margin-left: 5rem;
-}
-.mr-20 {
-	margin-right: 5rem;
-}
-.ml-10 {
-	margin-left: 2.5rem;
-}
-.mr-4 {
-	margin-right: 1rem;
 }
 .block {
 	display: block;
@@ -1310,6 +1298,9 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-72 {
+	height: 18rem;
+}
 .h-3 {
 	height: 0.75rem;
 }
@@ -1324,9 +1315,6 @@ select {
 }
 .h-24 {
 	height: 6rem;
-}
-.h-72 {
-	height: 18rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1373,14 +1361,14 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-96 {
+	width: 24rem;
+}
 .w-3 {
 	width: 0.75rem;
 }
 .w-1\/2 {
 	width: 50%;
-}
-.w-96 {
-	width: 24rem;
 }
 .w-36 {
 	width: 9rem;
@@ -1457,6 +1445,9 @@ select {
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-9 {
+	grid-template-columns: repeat(9, minmax(0, 1fr));
+}
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1465,12 +1456,6 @@ select {
 }
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-9 {
-	grid-template-columns: repeat(9, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1508,23 +1493,20 @@ select {
 .gap-1 {
 	gap: 0.25rem;
 }
+.gap-10 {
+	gap: 2.5rem;
+}
 .gap-2 {
 	gap: 0.5rem;
 }
 .gap-5 {
 	gap: 1.25rem;
 }
-.gap-8 {
-	gap: 2rem;
-}
 .gap-3 {
 	gap: 0.75rem;
 }
-.gap-10 {
-	gap: 2.5rem;
-}
-.gap-20 {
-	gap: 5rem;
+.gap-8 {
+	gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1695,13 +1677,17 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-blue-200 {
+.bg-blue-50 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+	background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
 }
 .bg-blue-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
 }
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
@@ -1714,6 +1700,10 @@ select {
 .bg-pink-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
+}
+.bg-green-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
 }
 .bg-red-400 {
 	--tw-bg-opacity: 1;
@@ -1734,10 +1724,6 @@ select {
 .bg-indigo-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
-}
-.bg-blue-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
 }
 .bg-blue-500 {
 	--tw-bg-opacity: 1;
@@ -2004,17 +1990,21 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
-.text-yellow-400 {
-	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
 .text-gray-100 {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+.text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 .text-green-700 {
 	--tw-text-opacity: 1;
@@ -2027,10 +2017,6 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-gray-50 {
-	--tw-text-opacity: 1;
-	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2183,10 +2169,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-300:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2207,6 +2189,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.hover\:text-blue-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(29, 78, 216, var(--tw-text-opacity));
+}
 .hover\:text-yellow-800:hover {
 	--tw-text-opacity: 1;
 	color: rgba(146, 64, 14, var(--tw-text-opacity));
@@ -2226,14 +2212,6 @@ select {
 .hover\:text-red-700:hover {
 	--tw-text-opacity: 1;
 	color: rgba(185, 28, 28, var(--tw-text-opacity));
-}
-.hover\:text-blue-700:hover {
-	--tw-text-opacity: 1;
-	color: rgba(29, 78, 216, var(--tw-text-opacity));
-}
-.hover\:text-gray-300:hover {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
@@ -2597,10 +2575,6 @@ select {
 
 	.md\:flex-row {
 		flex-direction: row;
-	}
-
-	.md\:justify-center {
-		justify-content: center;
 	}
 
 	.md\:gap-6 {
